--- a/app/resource/page.mdx
+++ b/app/resource/page.mdx
@@ -1,9 +1,31 @@
-"use client";
+## Welcome to My Resources
 
-## This is a heading
+Here's a collection of useful tools and technologies I work with:
 
-This is a list in markdown:
+### Development Tools
 
-- One
-- Two
-- Three
+- Visual Studio Code
+- Git & GitHub
+- Docker Containers
+- Kubernetes
+
+### Programming Languages
+
+- JavaScript/TypeScript
+- Python
+- Go
+- Rust
+
+### Interesting Facts
+
+Did you know? The first website ever created is still online! You can visit it at [CERN's website](http://info.cern.ch).
+
+### Current Projects
+
+1. Building scalable microservices
+2. Learning cloud architecture
+3. Contributing to open source
+
+> "Code is like humor. When you have to explain it, it's bad." – Cory House
+
+Feel free to connect with me on [GitHub](https://github.com) or [LinkedIn](https://linkedin.com)!
